Fix Menu z-index on small mobile device

--- a/style.css
+++ b/style.css
@@ -1220,6 +1220,7 @@ video {
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
+    z-index: 600;
   }
 
 
